# cli

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  installer.ps1  installer.sh  rustfmt.toml
.claude/: settings.local.json
.claude/skills/: git-workflow
.github/workflows/: ci.yml  release.yml  rust-clippy.yml  version-bump.yml
src/: cli.rs  context.rs  lib.rs  main.rs  net.rs  ui.rs  util.rs
src/commands/: codex.rs  create.rs  eaglecord.rs  goto.rs  help.rs  init.rs  mod.rs  spicetify.rs  uninstall.rs  update.rs  version.rs
src/commands/minecraft/: create.rs  fabric.rs  fs.rs  mod.rs  paper.rs  start.rs
tests/: cli_help.rs  goto.rs  minecraft_fabric.rs  minecraft_fs.rs  minecraft_paper.rs  minecraft_start.rs  net.rs  update.rs  util.rs
